# CodeTemplateGen

./: CMakeLists.txt  README.md  build.bat  build.command  codetemplategen.py  setup.cfg  setup.py
codetemplategen/: main.c  template_build_linux.c  template_build_mac.c  template_build_windows.c  template_cmakelists.c  template_disclaimer.c  template_readme.c  vscode_launch.c  vscode_tasks.c
codetemplategen.xcodeproj/: project.pbxproj
codetemplategen.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
codetemplategen.xcodeproj/project.xcworkspace/xcuserdata/manu.xcuserdatad/: UserInterfaceState.xcuserstate
codetemplategen.xcodeproj/xcuserdata/manu.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
codetemplategen.xcodeproj/xcuserdata/manu.xcuserdatad/xcschemes/: xcschememanagement.plist
pycodetemplategen/: __init__.py  __main__.py  bin2c.py  cgenerator.py  cmakegenerator.py  commands.py  template.py  text2c.py  util.py
pycodetemplategen/templates/: CMakeLists.txt  DISCLAIMER.md  README.md  build.bat  build.command
