cmake_minimum_required(VERSION 3.7)
project(%REPLACE_PROJECT_NAME%)

set(CMAKE_CXX_STANDARD 11)
set(CAMAKE_C_STANDARD 11)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})

message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")

SET(SOURCE_PATH "src")
set(SOURCE_FILES ${SOURCE_FILES} ${SOURCE_PATH}/main.c)
add_executable(${PROJECT_NAME} ${SOURCE_FILES})

install(TARGETS ${PROJECT_NAME} DESTINATION bin)

set(CMAKE_CXX_FLAGS "-g -")